outputs/ndx-test/eoh/2025-07-28_20-49-58/evaluations/problem_eval6202666681204811126_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/ndx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/ndx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/ndx/tmp/gpt_temp_7_2a4f2bc8.py", line 4
    std_10 = df['close'].rolling(window=10).std()
IndentationError: unexpected indent
